Fixed project demo links since I switched back to Heroku. Made scrollbar always visible to avoid page shifting.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,11 @@
 /******************************** END OF FONTS ********************************/
 
 /***************************** SHARED ACROSS PAGES ****************************/
+html {
+  // Make scollbar always visible to avoid page shifting
+  overflow-y:scroll;
+}
+
 body {
   font-family: 'Gidole-Regular';
   font-size: 17px;
@@ -120,6 +125,12 @@ a:hover {
   opacity: 0.5;
 }
 /******************************* END OF CONTACT *******************************/
+
+/*********************************** FILTERS **********************************/
+#filters p {
+  padding-top: 20px;
+}
+/******************************* END OF FILTERS *******************************/
 
 /********************************** PROJECTS **********************************/
 .project {
